Add add item functionality and message flash

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,16 @@
 <html>
 	<body>
 		<h1>{{restaurant.name}}</h1>
+		{% with messages = get_flashed_messages() %}
+			{% if messages %}
+				<ul>
+					{% for message in messages %}
+						<li><strong>{{message}}</strong></li>
+					{% endfor %}
+				</ul>
+			{% endif %}
+		{% endwith %}
+		<a href='{{url_for('newMenuItem', restaurant_id = restaurant.id)}}'>Add new item</a>
 		{% for i in items %}
 			<div>
 				<p>{{i.name}}</p>
