--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -2,8 +2,15 @@
 	<body>
 		<h1> New Menu Item </h1>
 			<form action="{{url_for('newMenuItem', restaurant_id=restaurant_id )}}" method = 'POST'>
-			<p>Name:</p>
-			<input type='text' size='30' name='name'>
+			<p></p>
+			<input type='text' size='30' name='name' placeholder='Name'>
+			</br>
+			<input type='text' size='30' name='price' placeholder='Price'>
+			</br>
+			<input type='text' size='30' name='description' placeholder='Description'>
+			</br>
+			<input type='text' size='30' name='course' placeholder='Course'>
+			</br>
 			<input type='submit' value='Create'>
 		</form>
 	</body>
